welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:9: error: not enough arguments for method col: (T: Array[java.awt.Color], nbr: Int)Unit.
Unspecified value parameter nbr.
    col(T)
       ^